--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,23 +3,36 @@
 <head>
   <title>UcoachClient</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div class="header">
-    <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-      <a class="pure-menu-heading" href="">uCoach</a>
+<div id="layout">
+  <!-- Menu toggle -->
+  <a href="#menu" id="menuLink" class="menu-link">
+    <!-- Hamburger icon -->
+    <span></span>
+  </a>
+
+  <div id="menu">
+    <div class="pure-menu">
+      <a class="pure-menu-heading" href="#">Company</a>
 
       <ul class="pure-menu-list">
-        <li class="pure-menu-item pure-menu-selected"><a href="#" class="pure-menu-link">Home</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Login</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Sign Up</a></li>
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Home</a></li>
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link">About</a></li>
+
+        <li class="pure-menu-item" class="menu-item-divided pure-menu-selected">
+          <a href="#" class="pure-menu-link">Services</a>
+        </li>
+
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Contact</a></li>
       </ul>
     </div>
   </div>
 
-<%= yield %>
+  <%= yield %>
 
+  <%= javascript_include_tag 'application' %>
+</div>
 </body>
 </html>
