--- a/app/views/home/login.html.erb
+++ b/app/views/home/login.html.erb
@@ -2,12 +2,12 @@
   <%= form_tag do_login_path, class: "pure-form pure-form-aligned" do %>
     <fieldset>
       <div class="pure-control-group">
-        <%= text_field_tag 'email', nil, placeholder: 'Email', class: "pure-input-1" %>
+        <%= email_field_tag 'email', nil, placeholder: 'Email', class: "pure-input-1", required: true %>
       </div>
       <div class="pure-control-group">
-        <%= password_field_tag 'password', nil, placeholder: 'Password', class: "pure-input-1" %>
+        <%= password_field_tag 'password', nil, placeholder: 'Password', class: "pure-input-1", required: true %>
       </div>
-      <button type="submit" class="pure-button button-primary" style="width:100%;">Login</button>
     </fieldset>
+    <button type="submit" class="pure-button button-primary" style="width:100%;">Login</button>
   <% end %>
 </div>
