--- a/app/views/home/register.html.erb
+++ b/app/views/home/register.html.erb
@@ -1,5 +1,5 @@
 <div class="login-form-container">
-  <%= form_tag do_login_path, class: "pure-form pure-form-aligned" do %>
+  <%= form_tag do_register_path, class: "pure-form pure-form-aligned" do %>
     <%= render 'shared/user_fields' %>
     <button type="submit" class="pure-button button-primary" style="width:100%;">Register</button>
   <% end %>
