--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,17 +15,13 @@
 
   <div id="menu">
     <div class="pure-menu">
-      <a class="pure-menu-heading" href="#">Company</a>
+      <a class="pure-menu-heading" href="#">uCoach</a>
 
       <ul class="pure-menu-list">
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Home</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">About</a></li>
-
-        <li class="pure-menu-item" class="menu-item-divided pure-menu-selected">
-          <a href="#" class="pure-menu-link">Services</a>
-        </li>
-
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Contact</a></li>
+        <li class="pure-menu-item"><%= link_to 'Profile', profile_path, class: "pure-menu-link" %></li>
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Measures</a></li>
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Goals</a></li>
+        <li class="pure-menu-item"><%= link_to 'Logout', logout_path, class: "pure-menu-link" %><li>
       </ul>
     </div>
   </div>
