--- a/app/views/home/login.html.erb
+++ b/app/views/home/login.html.erb
@@ -1,11 +1,17 @@
+<h1 class="ucoach">uCoach</h1>
 <div class="login-form-container">
   <%= form_tag do_login_path, class: "pure-form pure-form-aligned" do %>
+    <% if @login_error %>
+      <div class="form-error">
+        We couldn't log you in, check your information.
+      </div>
+    <% end %>
     <fieldset>
       <div class="pure-control-group">
-        <%= email_field_tag 'email', nil, placeholder: 'Email', class: "pure-input-1", required: true %>
+        <%= email_field_tag 'email', params[:email], placeholder: 'Email', class: "pure-input-1", required: true %>
       </div>
       <div class="pure-control-group">
-        <%= password_field_tag 'password', nil, placeholder: 'Password', class: "pure-input-1", required: true %>
+        <%= password_field_tag 'password', params[:password], placeholder: 'Password', class: "pure-input-1", required: true %>
       </div>
     </fieldset>
     <button type="submit" class="pure-button button-primary" style="width:100%;">Login</button>
