--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -1,14 +1,42 @@
-.login-form-container{
-  padding-top: 100px;
+/*
+ *= require purecss
+ *= require side-menu
+ *= require_self
+*/
+
+body {
+  background-color: #DADADA;
+  line-height: 1.7em;
+  color: #000000;
+  font-size: 16px;
+}
+
+#content{
   width: 100%;
 
-  form{
-    max-width: 450px;
+  h1.ucoach {
+    font-family: 'Lato', sans-serif;
+    letter-spacing: 1px;
+    color: #ff505b;
+    font-size: 50px;
+    padding-top: 100px;
+    text-align: center;
     margin: 0 auto;
-    background: #ffffff;
-    box-shadow: 0px 1px 2px 0 rgba(34, 36, 38, 0.15);
-    padding: 1em 1em;
-    border-radius: 0.28571429rem;
-    border: 1px solid rgba(34, 36, 38, 0.15);
+    margin-bottom: 30px;
+  }
+
+  .login-form-container {
+    margin: 0 auto;
+    width: 95%;
+    max-width: 450px;
   }
 }
+
+form {
+  background: #ffffff;
+  box-shadow: 0px 1px 2px 0 rgba(34, 36, 38, 0.15);
+  padding: 1em 1em;
+  border-radius: 0.28571429rem;
+  border: 1px solid rgba(34, 36, 38, 0.15);
+}
+
