--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
         <li class="pure-menu-item"><%= link_to 'Profile', profile_path, class: "pure-menu-link" %></li>
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">Measures</a></li>
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">Goals</a></li>
-        <li class="pure-menu-item"><%= link_to 'Logout', logout_path, class: "pure-menu-link" %><li>
+        <li class="pure-menu-item"><%= link_to 'Logout', logout_path, method: :delete, class: "pure-menu-link" %><li>
       </ul>
     </div>
   </div>
