--- a/app/views/home/login.html.erb
+++ b/app/views/home/login.html.erb
@@ -16,4 +16,5 @@
     </fieldset>
     <button type="submit" class="pure-button button-primary" style="width:100%;">Login</button>
   <% end %>
+  <div class="register-link"> Don't have an account? Register <%= link_to "here", register_path %> </div>
 </div>
