--- a/app/views/profile/my_profile.html.erb
+++ b/app/views/profile/my_profile.html.erb
@@ -45,12 +45,14 @@
       </div>
     </div>
 
-    <% if @user.measure.present? %>
+    <% if @user.healthMeasure.present? %>
       <h2 class="content-subhead">Latest Health Measures</h2>
 
-      <% @user.measure.each do |m| %>
+      <% @user.healthMeasure.each do |m| %>
         <div class="pure-g">
-          <div class="pure-u-1-1"><%= m.value %></div>
+          <div class="pure-u-1-3"><%= m.createdDate %></div>
+          <div class="pure-u-1-3"><%= m.value %></div>
+          <div class="pure-u-1-3"><%= m.hmType.units %></div>
         </div>
       <% end %>
     <% end %>
