show message after creating measure

--- a/app/views/profile/my_goals.html.erb
+++ b/app/views/profile/my_goals.html.erb
@@ -38,3 +38,8 @@
     <% end %>
   </div>
 </div>
+<script type="text/javascript">
+  <% if @message.present? %>
+    alert(@message);
+  <% end %>
+</script>
