--- a/app/views/profile/my_health_measures.html.erb
+++ b/app/views/profile/my_health_measures.html.erb
@@ -35,3 +35,10 @@
     <% end %>
   </div>
 </div>
+
+<script type="text/javascript">
+  console.log("message: <%= @message %>");
+  <% if @message.present? %>
+    alert("<%= @message %>");
+  <% end %>
+</script>
