--- a/app/views/profile/my_goals.html.erb
+++ b/app/views/profile/my_goals.html.erb
@@ -32,14 +32,15 @@
 
     <% @goals.each do |g| %>
       <div class="pure-g">
-        <div class="pure-u-1-2"><%= g.objective + " " + g.value.to_s + " " + g.hmType.units.to_s %></div>
-        <div class="pure-u-1-2"><%= g.frequency || "by " + g.dueDate.to_s %></div>
+        <div class="pure-u-1-3"><%= g.objective + " " + g.value.to_s + " " + g.hmType.units.to_s %></div>
+        <div class="pure-u-1-3"><%= g.frequency || "by " + g.dueDate.to_s %></div>
+        <div class="pure-u-1-3"><%= (g.achieved.present? and g.achieved == 1) ? "Achieved" : "Not Achieved" %></div>
       </div>
     <% end %>
   </div>
 </div>
 <script type="text/javascript">
   <% if @message.present? %>
-    alert(@message);
+    alert("You did it! You achieved a goal! Here's a joke to cheer you up :) \n \"<%= @message %>\"");
   <% end %>
 </script>
