--- a/app/views/profile/my_health_measures.html.erb
+++ b/app/views/profile/my_health_measures.html.erb
@@ -30,7 +30,7 @@
       <div class="pure-g">
         <div class="pure-u-1-3"><%= m.createdDate %></div>
         <div class="pure-u-1-3"><%= m.value %></div>
-        <div class="pure-u-1-3"><%= m.hmType.units %></div>
+        <div class="pure-u-1-3"><%= hm_units_hash[(params[:hm_type] || 1)] %></div>
       </div>
     <% end %>
   </div>
